--- a/homepage.css
+++ b/homepage.css
@@ -6,10 +6,274 @@
     font-family: alfa;
     src: url(font/AlfaSlabOne-Regular.ttf);
 }
+.chapter1{
+    background-color: #941414;
+    color: white;
+    font-family: aldrich;
+    font-size: 40px;
+    margin-top: -35px;
+    margin-left: 90px;
+    border-radius: 50%;
+    text-align: center;
+    line-height:75px;
+}
+.chapter1:hover{
+    box-shadow: 2px 2px 2px #888888;
+}
 .first-sentence{
     font-family: aldrich;
     font-weight: bolder;
     transform: rotate(90deg);
+    margin-top: 240px;
+    margin-left: -40px;
+}
+.second-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    margin-top: 300px;
+    margin-left: 280px;
+}
+.third-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    transform: rotate(90deg);
+    margin-top: -465px;
+    margin-left: 800px;
+}
+.fourth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    transform: rotate(90deg);
+    margin-top: 130px;
+    margin-left: 1500px;
+}
+.fifth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    margin-top: -100px;
+    margin-left: 1555px;
+}
+.sixth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    transform: rotate(90deg);
     margin-top: 320px;
-    margin-left: 100px;
+    margin-left: 1192px;
+}
+.seventh-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    margin-top: -162px;
+    margin-left: 1539px;
+}
+.chapter2{
+    background-color: #941414;
+    color: white;
+    font-family: aldrich;
+    font-size: 40px;
+    margin-top: -255px;
+    margin-left: 1400px;
+    border-radius: 50%;
+    text-align: center;
+    line-height:75px;
+}
+.chapter2:hover{
+    box-shadow: 2px 2px 2px #888888;
+}
+.writer{
+    font-family: aldrich;
+    color: #941414;
+    font-size: 30px;
+    margin-top: 650px;
+    margin-left: -10px;
+}
+.eighth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    margin-top: 10px;
+    margin-left: -10px;
+}
+.ninth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    transform: rotate(90deg);
+    margin-top: 55px;
+    margin-left: 305px;
+}
+.tenth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    margin-top: 70px;
+    margin-left: 384px;
+}
+.eleventh-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    margin-top: -120px;
+    margin-left: 1200px;
+}
+.twelvth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    transform: rotate(90deg);
+    margin-top: 95px;
+    margin-left: 1360px;
+}
+.chapter3{
+    background-color: #941414;
+    color: white;
+    font-family: aldrich;
+    font-size: 40px;
+    margin-top: -200px;
+    margin-left: 1080px;
+    border-radius: 50%;
+    text-align: center;
+    line-height:75px;
+}
+.chapter3:hover{
+    box-shadow: 2px 2px 2px #888888;
+}
+.thirteenth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    transform: rotate(90deg);
+    margin-top: -105px;
+    margin-left: 1950px;
+}
+.title{
+    color: #941414;
+    font-weight: bolder;
+    font-family: aldrich;
+    font-size: 80px;
+    margin-top: -315px;
+    margin-left: 1640px;
+    text-align: right;
+}
+.garden {
+	transition: all .5s;
+	position:relative;
+}
+.garden:hover {
+	color: #000000;
+}
+.garden:after {
+	content: '';
+	position: absolute;
+	height: 3px;
+	width: 0%;
+	bottom: 0;
+    left:0;
+    opacity:0;
+	margin-top: -8px;
+	background: #000000;
+	transition: all .5s;
+}
+.garden:hover::after {
+	opacity:1;
+    width:100%;
+}
+.of{
+	transition: all .5s;
+	position:relative;
+}
+
+.of:hover {
+	color: #000000;
+}
+
+.of:after {
+	content: '';
+	position: absolute;
+	height: 3px;
+	width: 0%;
+	bottom: 0;
+    left:0;
+    opacity:0;
+	margin-top: -8px;
+	background: #000000;
+	transition: all .5s;
+}
+
+.of:hover::after {
+	opacity:1;
+    width:100%;
+}
+.forking{
+	transition: all .5s;
+	position:relative;
+}
+.forking:hover {
+	color: #000000;
+}
+.forking:after {
+	content: '';
+	position: absolute;
+	height: 3px;
+	width: 0%;
+	bottom: 0;
+    left:0;
+    opacity:0;
+	margin-top: -8px;
+	background: #000000;
+	transition: all .5s;
+}
+.forking:hover::after {
+	opacity:1;
+    width:100%;
+}
+.paths{
+	transition: all .5s;
+	position:relative;
+}
+.paths:hover {
+	color: #000000;
+}
+.paths:after {
+	content: '';
+	position: absolute;
+	height: 3px;
+	width: 0%;
+	bottom: 0;
+    left:0;
+    opacity:0;
+	margin-top: -8px;
+	background: #000000;
+	transition: all .5s;
+}
+.paths:hover::after {
+	opacity:1;
+    width:100%;
+}
+.forteenth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    margin-top: -400px;
+    margin-left: 2500px;
+}
+.fifteenth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    transform: rotate(90deg);
+    margin-top: 195px;
+    margin-left: 2265px;
+}
+.sixteenth-sentence{
+    font-family: aldrich;
+    font-weight: bolder;
+    margin-top: -105px;
+    margin-left: 2245px;
+}
+.chapter4{
+    background-color: #941414;
+    color: white;
+    font-family: aldrich;
+    font-size: 40px;
+    margin-top: 330px;
+    margin-left: 2455px;
+    border-radius: 50%;
+    text-align: center;
+    line-height:75px;
+}
+.chapter4:hover{
+    box-shadow: 2px 2px 2px #888888;
 }
