--- a/homepage.css
+++ b/homepage.css
@@ -20,18 +20,24 @@
 .chapter1:hover{
     box-shadow: 2px 2px 2px #888888;
 }
+.div1{
+    font-family: aldrich;
+    font-weight: bolder;
+    margin-top: 240px;
+    margin-left: -40px;
+}
 .first-sentence{
     font-family: aldrich;
     font-weight: bolder;
     transform: rotate(90deg);
-    margin-top: 240px;
+    margin-top: 320px;
     margin-left: -40px;
 }
 .second-sentence{
     font-family: aldrich;
     font-weight: bolder;
-    margin-top: 300px;
-    margin-left: 280px;
+    margin-top: 225px;
+    margin-left: 355px;
 }
 .third-sentence{
     font-family: aldrich;
