--- a/chapter1.css
+++ b/chapter1.css
@@ -255,3 +255,11 @@ body{
     justify-content: space-between;
     flex-direction: column;
 }
+a:link{
+    color: black;
+    text-decoration: none;
+}
+a:visited{
+    color: black;
+    text-decoration: none;
+}
