--- a/chapter1.css
+++ b/chapter1.css
@@ -27,7 +27,7 @@ body{
 .arrested{
     color: #941414;
 }
-.agents{
+.implacable{
     color: #941414;
 }
 .p2{
@@ -39,6 +39,7 @@ body{
     background-color: white;
     text-align: left;
     z-index: 20;
+    display:none;
 }
 .then{
     padding: 1vw 2vw;
@@ -55,6 +56,7 @@ body{
     top: -8vw;
     background-color: #941414;
     text-align: left;
+    display: none;
 }
 .went{
     height: 210px;
@@ -74,6 +76,10 @@ body{
     background-color: white;
     text-align: left;
     z-index: 20;
+    display: none;
+}
+.secret{
+    color: #941414;
 }
 .in{
     padding: 1vw 2vw;
@@ -88,10 +94,14 @@ body{
     background-color: white;
     text-align: left;
     z-index: 20;
+    display:none;
 }
 .sat{
     padding: 1vw 1.5vw;
     font-family: aldrich;
+}
+.senseless{
+    color: #941414;
 }
 .p6{
     height: 100px;
@@ -102,6 +112,7 @@ body{
     background-color: white;
     text-align: left;
     z-index: 20;
+    display:none;
 }
 .ten{
     padding: 1vw 2vw;
@@ -115,6 +126,7 @@ body{
     top: -59vw;
     background-color: #941414;
     text-align: left;
+    display:none;
 }
 .timorous{
     height: 210px;
@@ -134,6 +146,7 @@ body{
     background-color: white;
     text-align: left;
     z-index: 20;
+    display:none;
 }
 .carried{
     padding: 1vw 2vw;
@@ -148,6 +161,7 @@ body{
     background-color: white;
     text-align: left;
     z-index: 20;
+    display:none;
 }
 .going{
     padding: 1vw 2vw;
@@ -161,6 +175,7 @@ body{
     top: -75vw;
     background-color: #941414;
     text-align: left;
+    display:none;
 }
 .silently{
     height: 210px;
@@ -180,6 +195,7 @@ body{
     background-color: white;
     text-align: left;
     z-index: 20;
+    display:none;
 }
 .last{
     padding: 1vw 2vw;
@@ -194,6 +210,7 @@ body{
     background-color: white;
     text-align: left;
     z-index: 20;
+    display:none;
 }
 .utter{
     padding: 1vw 2vw;
@@ -208,6 +225,7 @@ body{
     background-color: white;
     text-align: left;
     z-index: 20;
+    display:none;
 }
 .foresee{
     padding: 1vw 2vw;
@@ -222,21 +240,25 @@ body{
     background-color: white;
     text-align: left;
     z-index: 20;
+    display:none;
 }
 .thus{
     padding: 1vw 2vw;
     font-family: aldrich;
 }
+.background{
+    position:fixed
+}
 .chapter{
     color: black;
     font-family: aldrich;
     font-weight: bolder;
-    font-size: 140px;
+    font-size: 128px;
     display:flex;
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: nowrap;
-    margin-top:-3520px;
+    margin-top:-320px;
     position:relative;
     z-index: 10;
 }
@@ -250,16 +272,11 @@ body{
     justify-content: space-between;
     flex-direction: column;
 }
-.chapter1-3{
-    display:flex;
-    justify-content: space-between;
-    flex-direction: column;
-}
-a:link{
+.linkchapter1:link{
     color: black;
     text-decoration: none;
 }
-a:visited{
+.linkchapter1:visited{
     color: black;
     text-decoration: none;
 }
