--- a/chapter1.css
+++ b/chapter1.css
@@ -246,31 +246,33 @@ body{
     padding: 1vw 2vw;
     font-family: aldrich;
 }
-.background{
-    position:fixed
-}
+/*.background{
+    position:fixed;
+    height: 100vh;
+    width: 100vw;
+}*/
 .chapter{
     color: black;
     font-family: aldrich;
     font-weight: bolder;
-    font-size: 128px;
+    font-size: 124px;
     display:flex;
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: nowrap;
     margin-top:-320px;
-    position:relative;
+    position:fixed;
     z-index: 10;
 }
 .chapter1{
-    display:flex;
-    justify-content: space-between;
-    flex-direction: column;
+    display:fixed;
+    /*justify-content: space-between;
+    flex-direction: column;*/
 }
 .chapter1-2{
-    display:flex;
-    justify-content: space-between;
-    flex-direction: column;
+    display:fixed;
+    /*justify-content: space-between;
+    flex-direction: column;*/
 }
 .linkchapter1:link{
     color: black;
