--- a/chapter1.css
+++ b/chapter1.css
@@ -246,11 +246,6 @@ body{
     padding: 1vw 2vw;
     font-family: aldrich;
 }
-/*.background{
-    position:fixed;
-    height: 100vh;
-    width: 100vw;
-}*/
 .chapter{
     color: black;
     font-family: aldrich;
@@ -260,19 +255,20 @@ body{
     justify-content: space-between;
     flex-direction: row;
     flex-wrap: nowrap;
-    margin-top:-320px;
+    top:0;
     position:fixed;
     z-index: 10;
 }
 .chapter1{
-    display:fixed;
-    /*justify-content: space-between;
-    flex-direction: column;*/
+    display:flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 .chapter1-2{
-    display:fixed;
-    /*justify-content: space-between;
-    flex-direction: column;*/
+    display:flex;
+    justify-content: space-between;
+    flex-direction: column;
+    margin-left: 3vw;
 }
 .linkchapter1:link{
     color: black;
