--- a/homepage.css
+++ b/homepage.css
@@ -2,10 +2,6 @@
     font-family: aldrich;
     src: url(font/Aldrich-Regular.ttf);
 }
-@font-face {
-    font-family: alfa;
-    src: url(font/AlfaSlabOne-Regular.ttf);
-}
 .chapter1{
     background-color: #941414;
     color: white;
@@ -284,4 +280,12 @@
 }
 .chapter4:hover{
     box-shadow: 2px 2px 2px #888888;
+}
+a:link{
+    color: white;
+    text-decoration: none;
+}
+a:visited{
+    color: white;
+    text-decoration: none;
 }
